rust/macros/tests/ui/fail/duplicate_roles.stderr
error: Choreography parse error:
       Duplicate role declaration 'A'
         --> input:2:19
           |
         2 | {        roles A, A
                               ^

       Macro token input is parsed from original source text.
       Use the canonical indentation-based DSL surface in token form.
 --> tests/ui/fail/duplicate_roles.rs:4:1
  |
4 | / tell! {
5 | |     protocol Bad =
6 | |       roles A, A
7 | |       A -> A : Ping
8 | | }
  | |_^
  |
  = note: this error originates in the macro `tell` (in Nightly builds, run with -Z macro-backtrace for more info)
